@@ -1,3 +1,6 @@
+12 October 2016: Ralph
+	- Free view config elements.
+
 11 October 2016: Ralph
 	- Added qname-minimisation-strict config option.
 	- iana portlist update.
